# SoloHandle

./: .gitignore  启动.md
apps/api/: .env.example  pyproject.toml
apps/api/src/api/: main.py  settings.py
apps/api/src/api/core/: constants_loader.py  time_parse.py
apps/api/src/api/db/: connection.py
apps/api/src/api/repositories/: accounts_repo.py  dashboard_repo.py  events_repo.py  finance_repo.py  notifications_repo.py  orchestrator_repo.py  tasks_repo.py
apps/api/src/api/router/: prompt.txt  provider.py  route.py  schema.py
apps/api/src/api/routes/: chat.py  dashboard.py  events.py  finance.py  router_health.py  tasks.py
apps/api/src/api/scheduler/: __init__.py  reminder_scheduler.py
apps/api/src/api/services/: accounts_service.py  dashboard_service.py  events_service.py  finance_service.py  notifications_service.py  orchestrator_service.py  tasks_service.py
apps/api/src/api/tools/: events.py  notifications.py  tasks.py
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/lib/: app.dart  main.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/web/: pubspec.yaml
apps/web/lib/: api_client.dart  main.dart  models.dart
apps/web/web/: index.html  manifest.json
docker/: docker-compose.db.yml
docs/: api.md  architecture.txt  mindmap.txt  project_documentation.md  roadmap.md  schemas.md
scripts/: debug_request.py  init_db.py  run_scheduler.py  smoke_test.py
(+54 files in other folders)
