[project]
name = "ai-companion-api"
version = "0.1.0"
description = "AI Companion API (MVP)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pytest>=8.0",
  "tzdata>=2024.1",
  "tomli>=2.4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["src/api/tests"]
